remove comma robot

--- a/app/Resources/views/report/preFactor.html.twig
+++ b/app/Resources/views/report/preFactor.html.twig
@@ -264,7 +264,7 @@
                                     <span style="font-weight: bold;margin-left:10px;">سایر ابزارهای اطلاع رسانی :  </span>
                                     <span class="label-checkbox ">
                                             <img src="{{ web_dir~'/assets/img/square.png' }}" alt="" class="tickCalss" >
-                                            <span class="label">رُبات تلگرام</span>
+                                            <span class="label">ربات تلگرام</span>
                                         </span>
                                     <span class="label-checkbox ">
                                             <img src="{{ web_dir~'/assets/img/square.png' }}" alt="" class="tickCalss" >
