add adv contract

--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -184,7 +184,14 @@
                                                 {{  form_widget(form.separate,{'attr':{'class':'form-control'}})}}
                                             </div>
                                         </div>
-
+                                        <div class="form-group">
+                                            <label class="col-md-3 control-label">نوع آگهی:</label>
+                                            <div class="col-md-9">
+                                                <div class="mt-checkbox-inline">
+                                                    {{  form_widget(form.advItems,{'attr':{'class':''}})}}
+                                                </div>
+                                            </div>
+                                        </div>
 
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">نوع اشتراک:</label>
