--- a/app/Resources/views/page/contract.html.twig
+++ b/app/Resources/views/page/contract.html.twig
@@ -167,12 +167,14 @@
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">تاریخ شروع قرارداد:</label>
                                             <div class="col-md-4">
+                                                <input id="contractDateStartextra" type="text" class="form-control" name="contractStartTime"/>
                                                 {{  form_widget(form.contractStartDate,{'attr':{'class':'form-control'}})}}
                                             </div>
                                         </div>
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">تاریخ پایان قرارداد:</label>
                                             <div class="col-md-4">
+                                                <input id="contractDateEndextra" type="text" class="form-control" name="contractEndTime"/>
                                                 {{  form_widget(form.contractEndDate,{'attr':{'class':'form-control'}})}}
                                             </div>
                                         </div>
@@ -182,14 +184,7 @@
                                                 {{  form_widget(form.separate,{'attr':{'class':'form-control'}})}}
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <label class="col-md-3 control-label">نوع آگهی:</label>
-                                            <div class="col-md-9">
-                                                <div class="mt-checkbox-inline">
-                                                    {{  form_widget(form.advItems,{'attr':{'class':''}})}}
-                                                </div>
-                                            </div>
-                                        </div>
+
 
                                         <div class="form-group">
                                             <label class="col-md-3 control-label">نوع اشتراک:</label>
